...
      "isCommentAutoGenerated" : true
    },
    "App Select" : {
      "comment" : "The title of a view that allows users to select which family members have access to their devices.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Can't Delete Key" : {
      "comment" : "An alert title when the last key is attempted to be deleted.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {
      "comment" : "A button that dismisses the current view without saving any changes.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Close" : {
      "comment" : "A button to close the settings view.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Delete" : {
      "comment" : "A button label that deletes an app group.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "FAQ" : {
      "comment" : "The title of a screen that lists frequently asked questions.",
      "isCommentAutoGenerated" : true
...

    },
    "Grant Permission" : {
      "comment" : "A button that requests Screen Time permission.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Key Linked" : {
      "comment" : "A label indicating that a key has been successfully linked to a user.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Keys" : {
      "comment" : "The title of the view that lists the user's keys.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Location" : {
      "comment" : "A section header for the location of a key.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Location Set" : {
      "comment" : "A label displayed below the \"Pick on Map\" button in the \"Set Location\" step of the key setup process.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Next" : {
      "comment" : "The text for a button that moves to the next onboarding step.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "No Keys Available" : {
      "comment" : "A title for an alert that informs the user that they have no keys registered.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "No Max Daily Limits" : {
      "comment" : "Shown when no Max Daily Limits exist."
    },
...
      "isCommentAutoGenerated" : true
    },
    "OK" : {
      "comment" : "A label for a button that dismisses an alert.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Schedules" : {
      "comment" : "The title of the screen where users can view and manage their schedules.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Skip" : {
      "comment" : "A button that skips the current onboarding step.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Unblock All Apps" : {
      "comment" : "The text on a button that unblocks all apps.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Welcome to Normal" : {
      "comment" : "A welcome message displayed at the top of the onboarding screen.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "You're All Set" : {
      "comment" : "A title for the onboarding finish view.",
      "isCommentAutoGenerated" : true
...
