...
        case .none: "Unblocked"
        }
    }

    var title: String {
        switch self {
        case .all: "All Selected Apps Blocked"
        case .some: "Partially Blocked"
        case .none: "No Active Blocks"
        }
    }

    var color: Color {
        switch self {
        case .all: .green
...
